Extract LESS as CSS. Fix desktop navbar overlap

--- a/src/css/components/navbar.less
+++ b/src/css/components/navbar.less
@@ -18,6 +18,7 @@
 }
 
 .rangeSlider {
+  display: none;
   @media only screen and (max-width: 600px) {
     display: block;
   }
