--- a/src/css/main.less
+++ b/src/css/main.less
@@ -266,36 +266,32 @@ textarea {
   }
 }
 
-#main-spinner {
-  height: 800px;
-  z-index: 10;
-  background-color: #fff;
+// #main-spinner {
+//   height: 800px;
+//   z-index: 10;
+//   background-color: #fff;
 
-  .spinner-border {
-    top: 40%;
-    left: 45%;
-    width: 3rem;
-    height: 3rem;
+//   .spinner-border {
+//     top: 40%;
+//     left: 45%;
+//     width: 3rem;
+//     height: 3rem;
 
-    @media only screen and (min-width: 800px) {
-      left: 46%;
-    }
-  }
+//     @media only screen and (min-width: 800px) {
+//       left: 46%;
+//     }
+//   }
 
-  .spinner-text {
-    top: 46%;
-    left: 40%;
-    font-size: 2rem;
+//   .spinner-text {
+//     top: 46%;
+//     left: 40%;
+//     font-size: 2rem;
 
-    @media only screen and (min-width: 800px) {
-      left: 44%;
-    }
-  }
-}
-
-#main-body {
-  z-index: 1;
-}
+//     @media only screen and (min-width: 800px) {
+//       left: 44%;
+//     }
+//   }
+// }
 
 @import "components/card.less";
 @import "components/navbar.less";
